--- a/assets/css/exercicio.css
+++ b/assets/css/exercicio.css
@@ -1,5 +1,5 @@
 body.exercicio{
-    grid-template-rows:120px 60px 1fr 60px;
+    grid-template-rows:100px 40px 2fr 30px;
     grid-template-areas:
     "cabecalho"
     "navegacao"
@@ -7,7 +7,7 @@ body.exercicio{
     "rodape";
 }
 .principal{
-    height: calc(100vh - 240px);
+    height: calc(100vh - 168px);
 }
 .navegacao{
     grid-area: navegacao;
@@ -30,6 +30,8 @@ body.exercicio{
 
 .conteudo {
     font-size: 1.5rem;
+    border-radius: 10px;
+    box-shadow: 0px 4px 9px 2px rgba(0,0,0,0.75);
 }
 .conteudo > .titulo {
     font-size: 2.5rem;
